Remove is_active field from Section model and update index template to render section content dynamically

--- a/dashboard/templates/Mueller_1_0_0/index.html
+++ b/dashboard/templates/Mueller_1_0_0/index.html
@@ -144,96 +144,11 @@
 
         <!-- about            ----------------------------------------------- -->
         <section id="about" class="s-about target-section">
-          <div class="row section-header" data-num="1">
-            <h3
-              class="column lg-12 section-header__pretitle pretitle text-pretitle"
-            >
-              Who We Are
-            </h3>
-            <div class="column lg-6 stack-on-1100 section-header__primary">
-              <h2 class="title text-display-1">
-                Mueller is a branding agency based in Somewhere. We shape brand
-                identities and design thoughtful digital experiences.
-              </h2>
-            </div>
-            <div class="column lg-6 stack-on-1100 section-header__secondary">
-              <p class="desc">
-                Deleniti dolorem reiciendis repellat labore velit dolor nihil
-                qui. Deserunt sapiente odio quos quisquam dolorem cumque et
-                omnis. Minima quibusdam sequi consequatur magni non sunt est.
-              </p>
-            </div>
-          </div>
-          <!-- end section-header -->
-
-          <div
-            class="row process-list list-block show-ctr block-lg-one-half block-tab-whole"
-          >
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <h3 class="h5">Define</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Nemo cupiditate ab quibusdam quaerat impedit magni. Earum
-                  suscipit ipsum laudantium. Quo delectus est. Maiores voluptas
-                  ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                  Sunt suscipit voluptas ipsa in tempora esse soluta sint
-                  aliquam rhoncus elit.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <h3 class="h5">Design</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Quibusdam quis autem voluptatibus earum vel ex error ea magni.
-                  Rerum quam quos. Aut asperiores sit mollitia. Rem neque et
-                  voluptatem eos quia sed eligendi et. Eaque velit eligendi ut
-                  magnam. Cumque ducimus laborum doloribus facere maxime vel
-                  earum quidem enim suscipit.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <h3 class="h5">Build</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Non ullam est vel facere et. Qui iusto optio nostrum corrupti
-                  et dignissimos. Ipsam ipsam expedita aspernatur eos harum quo
-                  atque tempore non. Magni saepe hic fuga cumque. Nihil itaque
-                  laborum doloribus minus dolorum sint itaque animi et
-                  voluptatem. illum nemo rerum voluptate.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-
-            <div class="column list-block__item">
-              <div class="list-block__title">
-                <h3 class="h5">Launch</h3>
-              </div>
-              <div class="list-block__text">
-                <p>
-                  Nobis mollitia quo nulla sunt sit error repellat qui.
-                  Praesentium minima consequatur. Aliquid aliquid aut.
-                  Asperiores sed temporibus laboriosam delectus optio rerum
-                  reiciendis. Quas at illum. Dolores itaque architecto. Magnam
-                  voluptatem aperiam. Velit omnis est.
-                </p>
-              </div>
-            </div>
-            <!-- end list-block__item -->
-          </div>
-          <!-- end process-list -->
+            {% for section in sections %}
+                {% if section.name == 'about' %}
+                    {{ section.content|safe }}
+                {% endif %}
+            {% endfor %}
         </section>
         <!-- end s-about -->
 
